update : travel and travel document service errors resolved